server success false error fix, dark mode styling

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+/* html {
   scrollbar-gutter: stable;
   background-color: rgb(226 232 240);
-}
+} */
